# lopez

./: .gitignore  Cargo.toml  build.sh  code-of-conduct.md  contributing.md  contributors.md  install.sh  license  readme.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
editor-support/vscode/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
editor-support/vscode/syntaxes/: lopez-crawl-directive.rion  lopez-crawl-directives.tmLanguage.plist
entalator/: Cargo.toml
entalator/src/: main.rs
examples/: lopez-github.lcd
lib-lopez/: Cargo.toml
lib-lopez/src/: backend.rs  cancel.rs  cli.rs  db.rs  directives.pest  env.rs  error.rs  hash.rs  lib.rs  logger.rs  origins.rs  page_rank.rs  panic.rs  pretty_print.rs  profile.rs  robots.rs  type.rs
lib-lopez/src/backend/: dummy.rs  mod.rs
lib-lopez/src/crawler/: boundaries.rs  counter.rs  diagnostics.rs  downloader.rs  master.rs  mod.rs  origins.rs  parser.rs  reason.rs  robots.rs  worker.rs
lib-lopez/src/crawler/downloader/: mod.rs  web_driver.rs
lib-lopez/src/crawler/server/: transport.rs
lib-lopez/src/crawler/worker/: mod.rs  origins.rs
lib-lopez/src/directives/: aggregator.rs  directives.rs  error.rs  extractor.rs  mod.rs  parse.rs  parse_common.rs  parse_utils.rs  selector.rs  transformer.rs  value_ext.rs  variable.rs
lib-lopez/src/directives/expressions/: aggregator.rs  extractor.rs  mod.rs  parse.rs  transformer.rs  value_ext.rs
lib-lopez/src/directives2/: mod.rs
lib-lopez/src/server/: mod.rs  rpc.rs
lopez/: .gitignore  Cargo.toml  ignore-tracking.lcd  main.lcd  seo.lcd
lopez/src/: cli.rs  logger.rs  main.rs
postgres-lopez/: Cargo.toml  Migrant.toml  db.rs
postgres-lopez/migrations/20191015021106_init/: up.sql
postgres-lopez/migrations/20191030014035_real-descriptions/: up.sql
postgres-lopez/migrations/20191214201027_delete-waves/: up.sql
postgres-lopez/migrations/20200818153531_new-on-page-analyses/: up.sql
postgres-lopez/migrations/20200825234443_named-tables/: down.sql  up.sql
postgres-lopez/migrations/20200825235629_simplify-page-rank/: up.sql
postgres-lopez/migrations/20201001185421_typed-analyses/: up.sql
postgres-lopez/src/: db.rs  error.rs  lib.rs  master.rs  ranker.rs  worker.rs
postgres-lopez/src/sql/: canonical_linkage.sql  count_crawled.sql  create_analyses.sql  ensure_analyzed.sql  ensure_closed.sql  ensure_error.sql  ensure_links.sql  ensure_names.sql  ensure_page_rank.sql  ensure_status.sql  ensure_wave.sql  exists_taken.sql  fetch.sql  get_wave_size.sql  linkage.sql  remove_wave.sql  reset_queue.sql
std-lopez/: bad-extensions.lcd  ignore-big-tech.lcd  ignore-tracking.lcd  og.lcd  prelude.lcd  seo.lcd
std-lopez/disallows/: internet-archives.lcd  module.lcd  social-media.lcd  wikipedia.lcd
std-lopez/frontiers/: internet-archives.lcd  module.lcd  social-media.lcd  wikipedia.lcd
