[package]
name = "lib-lopez"
version = "0.6.0"
authors = ["Pedro Arruda <pedrobittencourt3@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Networking and Web stuff:
# hyper-tls = "0.4.3"
hyper-rustls = "0.21.0"
hyper = "0.13.8"
# reqwest = { version = "0.10.8", features = ["rustls-tls"], default-features = false }
scraper = "0.12.0"
url = "2.1.1"
http = "0.2.1"
libflate = "1.0.2"
robots_txt = "0.7.0"

# Runtime:
futures = "0.3.5"
rayon = "1.4.1"
tokio = { version = "0.2.22", features = ["macros", "rt-core", "rt-util"] }

# Serialization:
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.58"

# Text stuff
siphasher = "0.3.3"
nom = "5.1.2"
regex = "1.3.9"

# Sonstiges:
lazy_static = "1.4.0"
log = "0.4.11"
backtrace = "0.3.51"
failure = "0.1.8"
failure_derive = "0.1.8"
async-trait = "0.1.41"
structopt = "0.3.18"
ansi_term = "0.12.1"
log4rs = "0.13.0"
cached = { version = "0.19.0", default-features = false }
smallvec = "1.4.2"
colored_json = "2.1.0"
serde_regex = "1.1.0"
