[package]
name = "lib-lopez"
version = "0.6.1"
authors = ["Pedro Arruda <pedrobittencourt3@protonmail.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Networking and Web stuff:
hyper-rustls = "0.23.0"
hyper = "0.14.16"
scraper = "0.12.0"
url = { version = "2.2.2", features = ["serde"] }
http = "0.2.6"
libflate = "1.1.1"
robots_txt = "0.7.0"

# Runtime:
futures = "0.3.19"
rayon = "1.5.1"
tokio = { version = "1.15.0", features = ["macros", "time"] }

# Serialization:
serde = "1.0.134"
serde_derive = "1.0.134"
serde_json = "1.0.75"

# Text stuff
siphasher = "0.3.9"
nom = "7.1.0"
regex = "1.5.4"

# Sonstiges:
lazy_static = "1.4.0"
log = "0.4.14"
backtrace = "0.3.63"
failure = "0.1.8"
failure_derive = "0.1.8"
async-trait = "0.1.52"
structopt = "0.3.26"
ansi_term = "0.12.1"
log4rs = "1.0.0"
cached = { version = "0.30.0", default-features = false }
smallvec = "1.8.0"
colored_json = "2.1.0"
serde_regex = "1.1.0"
