[package]
name = "postgres-lopez"
version = "0.5.1"
authors = ["Pedro Arruda <pedrobittencourt3@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-lopez = { path = "../lib-lopez" }

tokio = { version = "0.2.22", features = ["rt-util"] }
tokio-postgres = { version = "0.5.5", features = ["with-serde_json-1"] }
migrant_lib = { version = "0.30.0", features = ["d-postgres"] }

include_dir = "0.6.0"
structopt = "0.3.17"
log = "0.4.11"
failure = "0.1.8"
failure_derive = "0.1.8"
