[package]
name = "postgres-lopez"
version = "0.6.1"
authors = ["Pedro Arruda <pedrobittencourt3@protonmail.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-lopez = { path = "../lib-lopez" }

tokio = { version = "1.15.0", features = ["macros"] }
tokio-postgres = { version = "0.7.5", features = ["with-serde_json-1"] }
migrant_lib = { version = "0.33.0", features = ["d-postgres"] }

include_dir = "0.7.2"
structopt = "0.3.26"
log = "0.4.14"
failure = "0.1.8"
failure_derive = "0.1.8"
anyhow = "1.0.53"
serde = "1.0.136"
serde_derive = "1.0.136"
